<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <EditText
        android:id="@+id/item_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/txtlpass"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:lines="1"
        android:paddingLeft="9.0dip"
        android:paddingRight="9.0dip"
        android:text="samad"
        android:textColor="@android:color/black"
        android:textSize="14.0sp" />

    <EditText
        android:id="@+id/txtlpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/item_p"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/enter_passcode"
        android:inputType="textPassword"
        android:lines="1"
        android:paddingLeft="9.0dip"
        android:paddingRight="9.0dip"
        android:text="samad"
        android:textColor="@android:color/black"
        android:textSize="14.0sp" />

    <Button
        android:id="@+id/button_ok_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/txtlpass"
        android:layout_below="@+id/txtlpass"
        android:layout_marginTop="28dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/button_cancel_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/button_ok_add"
        android:layout_below="@+id/button_ok_add"
        android:layout_marginTop="26dp"
        android:text="@string/forgot_passcode" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/button_cancel_action"
        android:layout_below="@+id/button_cancel_action"
        android:layout_marginTop="34dp"
        android:text="@string/registration" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/button_register"
        android:layout_marginBottom="20dp"
        android:text="@string/exit" />

</RelativeLayout>